--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -16,14 +16,14 @@ main:
   - name: 组内新闻
     url: /post/
     weight: 13
-  - name: Experience
-    url: experience/
-    weight: 20
+  # - name: Experience
+  #   url: experience/
+  #   weight: 20
   - name: Projects
     url: projects/
     weight: 30
-  - name: Teaching
-    url: teaching/
+  - name: 研究方向
+    url: research/
     weight: 40
   - name: 团队成员
     url: team/
