--- a/.github/workflows/hugo-deploy.yml
+++ b/.github/workflows/hugo-deploy.yml
@@ -30,22 +30,27 @@ jobs:
           hugo-version: 'latest'
           extended: true
 
-      - name: Build with Hugo
+      - name: Build
+        env:
+          HUGO_ENVIRONMENT: production
         run: |
           hugo --minify --baseURL "https://alpaca10086zyys.github.io/url_test/"
-          
+
+      - name: Setup Pages
+        uses: actions/configure-pages@v3
+
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
         with:
           path: ./public
 
   deploy:
+    needs: build
+    runs-on: ubuntu-latest
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: ubuntu-latest
-    needs: build
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v3
+        uses: actions/deploy-pages@v2
