--- a/.github/workflows/hugo-deploy.yml
+++ b/.github/workflows/hugo-deploy.yml
@@ -14,6 +14,10 @@ concurrency:
   group: "pages"
   cancel-in-progress: false
 
+defaults:
+  run:
+    shell: bash
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -30,27 +34,22 @@ jobs:
           hugo-version: 'latest'
           extended: true
 
-      - name: Build
-        env:
-          HUGO_ENVIRONMENT: production
+      - name: Build with Hugo
         run: |
-          hugo --minify --baseURL "https://alpaca10086zyys.github.io/url_test/"
-
-      - name: Setup Pages
-        uses: actions/configure-pages@v3
-
+          hugo --minify --baseURL "https://你的用户名.github.io/url_test/"
+          
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
         with:
           path: ./public
 
   deploy:
-    needs: build
-    runs-on: ubuntu-latest
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: build
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v2
+        uses: actions/deploy-pages@v2 
